Optimization for font loading and compressing CSS
Refs: https://font-display.glitch.me

--- a/core/assets/less/fontcons.less
+++ b/core/assets/less/fontcons.less
@@ -10,6 +10,7 @@
 // --------------------------------------------------
 	@font-face {
 		font-family: 'Fontcons';
+		font-display: block;
 		src: url('@{pathSystemCss}/fonts/fontcons-webfont.eot');
 		src: url('@{pathSystemCss}/fonts/fontcons-webfont.eot?#iefix') format('embedded-opentype'), 
 			 url('@{pathSystemCss}/fonts/fontcons-webfont.woff') format('woff'), 
