--- a/core/templates/kimera/less/_fonts.less
+++ b/core/templates/kimera/less/_fonts.less
@@ -17,6 +17,7 @@
 	font-family: 'Kaushan Script';
 	font-style: normal;
 	font-weight: 400;
+	font-display: optional;
 	src: local('Kaushan Script'),
 		 local('KaushanScript-Regular'),
 		 url('@{pathFonts}kaushanscript/KaushanScript-Regular.ttf') format('truetype'); //,
@@ -26,6 +27,7 @@
 // Body font
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-Light-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-Light-webfont.woff') format('woff'),
@@ -37,6 +39,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-LightItalic-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-LightItalic-webfont.woff') format('woff'),
@@ -48,6 +51,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-Regular-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-Regular-webfont.woff') format('woff'),
@@ -59,6 +63,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-Italic-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-Italic-webfont.woff') format('woff'),
@@ -70,6 +75,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-Semibold-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-Semibold-webfont.woff') format('woff'),
@@ -81,6 +87,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-SemiboldItalic-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-SemiboldItalic-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-SemiboldItalic-webfont.woff') format('woff'),
@@ -92,6 +99,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-Bold-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-Bold-webfont.woff') format('woff'),
@@ -103,6 +111,7 @@
 
 @font-face {
 	font-family: 'OpenSans';
+	font-display: optional;
 	src: url('@{pathFonts}opensans/OpenSans-BoldItalic-webfont.eot');
 	src: url('@{pathFonts}opensans/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
 		 url('@{pathFonts}opensans/OpenSans-BoldItalic-webfont.woff') format('woff'),
