--- a/templates/bmc/less/_layout/common/_item_listings.less
+++ b/templates/bmc/less/_layout/common/_item_listings.less
@@ -11,9 +11,13 @@
 .entries li,
 .results li {
 	border-bottom: 1px solid #dadada;
-	padding: 1em 0 1em 1em;
+	padding: 2em 0;
 	margin: 0;
 	list-style: none;
+
+	&:last-child {
+		border-bottom: 0;
+	}
 }
 
 .results p,
