[APP/TEMPLATES/BMC] Updates from Ilya.
- New newsletter module to handle form in footer.
- New custom html module to handle html in footer.
- Other minor template changes.

--- a/app/templates/bmc/less/_layout/_template.less
+++ b/app/templates/bmc/less/_layout/_template.less
@@ -18,6 +18,7 @@ body > .wrap {
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
 		flex-direction: column;
+		position: relative;
 	}
 
 	& > .dashboard-panel {
@@ -412,11 +413,6 @@ footer.global {
 			h4 {
 				color: #fff;
 				font-size: 1.1rem;
-			}
-
-			input {
-				width: 90%;
-				max-width: 22rem;
 			}
 
 			ul,
