--- a/app/templates/bmc/less/_layout/common/_forms.less
+++ b/app/templates/bmc/less/_layout/common/_forms.less
@@ -1,5 +1,7 @@
 .data-entry {
-	margin-bottom: 1rem;
+	margin-bottom: 3rem;
+	padding: 1rem;
+	background: #efefef;
 }
 
 label {
@@ -112,6 +114,11 @@ input[type="file"]:focus {
 #hubForm textarea {
 	margin-top: 0.25em;
 	width: 100%;
+}
+
+#hubForm input[type='checkbox'] {
+	margin-top: 0;
+	width: auto;
 }
 
 #hubForm .btn {
