--- a/app/templates/bmc/html/system/css/introduction.css
+++ b/app/templates/bmc/html/system/css/introduction.css
@@ -9,6 +9,8 @@
   -webkit-box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.04);
   -moz-box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.04);
   box-shadow: 0px 1px 30px rgba(0, 0, 0, 0.04);
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 #introduction:after {
   content: '' !important;
