--- a/app/templates/bmc/less/_layout/header/header.less
+++ b/app/templates/bmc/less/_layout/header/header.less
@@ -181,6 +181,11 @@ header.page {
 						//box-shadow: 0 1px 3px rgba(0,0,0,0.3);
 						.transition();
 					}
+
+					span {
+						padding-left: 0.5rem;
+						font-size: 0.75rem;
+					}
 				}
 
 				& > *	 {
