--- a/templates/bmc/css/pages/homepage.css
+++ b/templates/bmc/css/pages/homepage.css
@@ -219,29 +219,71 @@ h3 {
   top: 50%;
 }
 
-.community .right {
+.community .module-right {
   width: 50%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 2fr);
+  grid-auto-rows: 250px;
 }
 
-.community .right .big {
+.community .module-right .big {
   grid-column: span 2;
   grid-row: span 2;
   background-color: #D8D8D8;
   border: 1px solid #979797;
 }
 
-.community .right .regular {
+.community .module-right .big .billboard-image {
+  height: 100%;
+}
+
+.community .module-right .big .billboard-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.community .module-right .regular {
   background-color: #D8D8D8;
   border: 1px solid #979797;
 }
 
-.community .right .horizontal {
+.community .module-right .regular .billboard-image {
+  width: 100%;
+  height: 100%;
+}
+
+.community .module-right .regular .billboard-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.community .module-right .regular .resource-img {
+  width: 100%;
+  height: 100%;
+}
+
+.community .module-right .regular .resource-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.community .module-right .horizontal {
   grid-column: span 2;
   background-color: #D8D8D8;
   border: 1px solid #979797;
+}
+
+.community .module-right .horizontal .billboard-image {
+  height: 100%;
+}
+
+.community .module-right .horizontal .billboard-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .three {
@@ -341,20 +383,19 @@ h3 {
     grid-column: 1 / span 4;
     grid-row: 1;
   }
-  .community .right {
+  .community .module-right {
     width: 100%;
     grid-column: 1 / span 4;
     grid-row: 2;
-    grid-template-rows: repeat(4, 2fr);
   }
-  .community .right .big {
+  .community .module-right .big {
     grid-column: span 4;
     grid-row: span 2;
   }
-  .community .right .regular {
+  .community .module-right .regular {
     grid-column: span 2;
   }
-  .community .right .horizontal {
+  .community .module-right .horizontal {
     grid-column: span 4;
   }
   .three {
@@ -408,7 +449,7 @@ h3 {
   .community .left {
     width: auto;
   }
-  .community .right {
+  .community .module-right {
     width: auto;
   }
   .three .service {
