--- a/app/templates/bmc/css/pages/homepage.scss
+++ b/app/templates/bmc/css/pages/homepage.scss
@@ -208,25 +208,59 @@ h3 {
       }
     }
   }
-  .right {
+  .module-right {
     width: 50%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 2fr);
+    grid-auto-rows: 250px;
     .big {
       grid-column: span 2;
       grid-row: span 2;
       background-color: #D8D8D8;
       border: 1px solid #979797;
+      .billboard-image {
+        height: 100%;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+      }
     }
     .regular {
       background-color: #D8D8D8;
       border: 1px solid #979797;
+      .billboard-image {
+        width: 100%;
+        height: 100%;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+      .resource-img {
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
     }
     .horizontal {
       grid-column: span 2;
       background-color: #D8D8D8;
       border: 1px solid #979797;
+      .billboard-image {
+        height: 100%;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+      }
     }
   }
 }
@@ -323,11 +357,11 @@ h3 {
       grid-column: 1 / span 4;
       grid-row: 1;
     }
-    .right {
+    .module-right {
       width: 100%;
       grid-column: 1 / span 4;
       grid-row: 2;
-      grid-template-rows: repeat(4, 2fr);
+      // grid-template-rows: repeat(4, 2fr);
       .big {
         grid-column: span 4;
         grid-row: span 2;
@@ -401,7 +435,7 @@ h3 {
     .left {
       width: auto;
     }
-    .right {
+    .module-right {
       width: auto;
     }
   }
