--- a/templates/bmc/css/pages/homepage.css
+++ b/templates/bmc/css/pages/homepage.css
@@ -223,14 +223,12 @@ h3 {
   width: 50%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 250px;
+  grid-template-rows: repeat(2, 200px);
 }
 
 .community .module-right .big {
   grid-column: span 2;
   grid-row: span 2;
-  background-color: #D8D8D8;
-  border: 1px solid #979797;
 }
 
 .community .module-right .big .billboard-image {
@@ -243,47 +241,78 @@ h3 {
   object-fit: cover;
 }
 
-.community .module-right .regular {
-  background-color: #D8D8D8;
-  border: 1px solid #979797;
-}
-
-.community .module-right .regular .billboard-image {
-  width: 100%;
-  height: 100%;
-}
-
-.community .module-right .regular .billboard-image img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.community .module-right .regular .resource-img {
-  width: 100%;
-  height: 100%;
-}
-
-.community .module-right .regular .resource-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .community .module-right .horizontal {
   grid-column: span 2;
-  background-color: #D8D8D8;
-  border: 1px solid #979797;
 }
 
-.community .module-right .horizontal .billboard-image {
+.community .module-right .billboard-image {
+  width: 100%;
   height: 100%;
+  margin: auto;
 }
 
-.community .module-right .horizontal .billboard-image img {
+.community .module-right .billboard-image img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.community .module-right .billboard-image::after {
+  content: '';
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, transparent 20%, transparent 50%, transparent 80%, rgba(0, 0, 0, 0.6) 100%);
+  margin-top: -200px;
+  height: 200px;
+  width: 100%;
+}
+
+.community .module-right .billboard-header {
+  position: relative;
+  bottom: 34%;
+  padding: 10px;
+}
+
+.community .module-right .billboard-header a {
+  color: #fff;
+}
+
+.community .module-right .resource-img {
+  width: 100%;
+  height: 100%;
+}
+
+.community .module-right .resource-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.community .module-right .resource-img::after {
+  content: '';
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, transparent 20%, transparent 50%, transparent 80%, rgba(0, 0, 0, 0.6) 100%);
+  margin-top: -200px;
+  height: 200px;
+  width: 100%;
+}
+
+.community .module-right .group {
+  align-self: center;
+}
+
+.community .module-right .group .group-img {
+  text-align: center;
+}
+
+.community .module-right .group .group-description {
+  text-align: center;
+}
+
+.community .module-right .resource .resource-title {
+  position: relative;
+  bottom: 30%;
 }
 
 .three {
